--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 
       <div>
         <img id="trainer" src="https://www.ssbwiki.com/images/thumb/a/a0/FRLGMaleTrainer.png/200px-FRLGMaleTrainer.png" alt="Pokemon Trainer">
-        <img id="greatball" src="https://mbtskoudsalg.com/images/great-ball-png-1.png" alt="A great ball">
+        <div id="enlarge">
+        <span id="fadeOut">
+        <a href="#"><img id="greatball" src="https://mbtskoudsalg.com/images/great-ball-png-1.png" alt="A great ball"></a>
+        </span>
+      </div>
+
         </div>
 
 
