--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
 
 
       <div>
+        
+
         <img id="trainer" src="https://www.ssbwiki.com/images/thumb/a/a0/FRLGMaleTrainer.png/200px-FRLGMaleTrainer.png" alt="Pokemon Trainer">
+
+        <div class="deBlock">
+            <img id="poke1" src="http://pa1.narvii.com/6395/8882ca52ae8c93fe9d7601770c074d8072f27a13_00.gif" alt="Typhlosion">
+            <p></p>
+            </div>
+
         <div id="enlarge">
         <span id="fadeOut">
         <a href="#"><img id="greatball" src="https://mbtskoudsalg.com/images/great-ball-png-1.png" alt="A great ball"></a>
