added new pokemon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Personal Pokedex</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min">
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -18,22 +19,33 @@
 
 
       <div>
-        
+
 
         <img id="trainer" src="https://www.ssbwiki.com/images/thumb/a/a0/FRLGMaleTrainer.png/200px-FRLGMaleTrainer.png" alt="Pokemon Trainer">
 
-        <div class="deBlock">
-            <img id="poke1" src="http://pa1.narvii.com/6395/8882ca52ae8c93fe9d7601770c074d8072f27a13_00.gif" alt="Typhlosion">
-            <p></p>
+          <div class="container" style="display: inline;">
+            <div class="row" style="display: inline;">
+            <div class="box">
+            <img id="poke1" src="#" alt="Typhlosion">
+            <ul class="blocc">
+            <li >hp</li></br>
+            <li>attack</li></br>
+            <li>abilities</li></br>
             </div>
+            </div>
+          </div>
+          </div>
 
-        <div id="enlarge">
+
+
+
+          <!-- <div id="enlarge">
         <span id="fadeOut">
         <a href="#"><img id="greatball" src="https://mbtskoudsalg.com/images/great-ball-png-1.png" alt="A great ball"></a>
         </span>
-      </div>
+        </div> -->
 
-        </div>
+
 
 
 
