--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Personal Pokedex</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,13 +19,10 @@
       <span id="underline"></span>
 
 
-      <div>
-        <div class="adjusted box">
-          <h1>Badges</h1>
-        </div>
 
+        <div id="moveRed">
         <img id="trainer" src="https://www.ssbwiki.com/images/thumb/a/a0/FRLGMaleTrainer.png/200px-FRLGMaleTrainer.png" alt="Pokemon Trainer">
-
+      </div>
           <div class="container" style="display: inline;">
             <div class="row" style="display: inline;">
             <div class="box">
@@ -33,20 +31,38 @@
             <li >hp</li></br>
             <li>attack</li></br>
             <li>abilities</li></br>
+
             </div>
             </div>
+
+            <button>Next Pokemon</button>
           </div>
+
           </div>
 
+          <div id='drawing'  class="invis">
+            <div class="adjusted box">
+
+              <h1>Badges</h1>
+
+              <span id="underline"></span>
+            </br>
+            </br>
 
 
+              <img class="badges" src="https://vignette.wikia.nocookie.net/nintendo/images/d/dd/Boulder_Badge.png/revision/latest/scale-to-width-down/50?cb=20111015172933&path-prefix=en" alt"Boulder Badge">
+              <img class="badges" src="https://vignette.wikia.nocookie.net/nintendo/images/9/9c/Cascade_Badge.png/revision/latest/scale-to-width-down/50?cb=20111015172933&path-prefix=en" alt="Cascade Badge">
+              <img class="badges" src="https://vignette.wikia.nocookie.net/nintendo/images/a/a6/Thunder_Badge.png/revision/latest/scale-to-width-down/48?cb=20111015173129&path-prefix=en" alt="Thunder Badge">
+              <img class="badges" src="https://vignette.wikia.nocookie.net/nintendo/images/b/b5/Rainbow_Badge.png/revision/latest/scale-to-width-down/50?cb=20111015173128&path-prefix=en" alt="Rainbow Badge">
+            </br>
+              <img class="badges" src="https://vignette.wikia.nocookie.net/nintendo/images/7/7b/Mineral_Badge.png/revision/latest/scale-to-width-down/50?cb=20111015173035&path-prefix=en" alt="Empty Badge">
+              <img class="badges" src="https://vignette.wikia.nocookie.net/nintendo/images/7/7b/Mineral_Badge.png/revision/latest/scale-to-width-down/50?cb=20111015173035&path-prefix=en" alt="Empty Badge">
+              <img class="badges" src="https://vignette.wikia.nocookie.net/nintendo/images/7/7b/Mineral_Badge.png/revision/latest/scale-to-width-down/50?cb=20111015173035&path-prefix=en" alt="Empty Badge">
+              <img class="badges" src="https://vignette.wikia.nocookie.net/nintendo/images/7/7b/Mineral_Badge.png/revision/latest/scale-to-width-down/50?cb=20111015173035&path-prefix=en" alt="Empty Badge">
 
-          <!-- <div id="enlarge">
-        <span id="fadeOut">
-        <a href="#"><img id="greatball" src="https://mbtskoudsalg.com/images/great-ball-png-1.png" alt="A great ball"></a>
-        </span>
-        </div> -->
 
+              </div>
+            </div>
 
 
 
